--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,10 @@
 spring.application.name=webapi
-spring.datasource.url=jdbc:mysql://localhost:3306/grafosofos
+#spring.datasource.url=jdbc:mysql://localhost:3306/grafosofos
+#spring.datasource.username=root
+#spring.datasource.password=my$QLp@ssW0rd001
+
+spring.datasource.url=jdbc:mysql://mysql-tc_h.railway.internal:3306/railway
 spring.datasource.username=root
-spring.datasource.password=my$QLp@ssW0rd001
+spring.datasource.password=sDvwBhQfhtsuCCNHrfhvrQHQTqOOJdtI
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
