--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,19 @@ spring.application.name=webapi
 #spring.datasource.username=root
 #spring.datasource.password=my$QLp@ssW0rd001
 
-spring.datasource.url=jdbc:mysql://mysql-tc_h.railway.internal:3306/railway
+#spring.datasource.url=jdbc:mysql://mysql-tc_h.railway.internal:3306/railway
+#spring.datasource.username=root
+#spring.datasource.password=sDvwBhQfhtsuCCNHrfhvrQHQTqOOJdtI
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#testing to connect locally
+spring.datasource.url=jdbc:mysql://autorack.proxy.rlwy.net:22790/railway
 spring.datasource.username=root
 spring.datasource.password=sDvwBhQfhtsuCCNHrfhvrQHQTqOOJdtI
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+
+# Hibernate settings
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
